feat: scaffold calls service and api calls for it
